--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.66.0",
+    "path": "^0.12.7",
     "winston": "^3.14.2"
   }
 }
