--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
     "pg": "^8.13.0",
+    "tweetnacl": "^1.0.3",
     "winston": "^3.14.2"
   }
 }
