--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.731.1",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
@@ -20,6 +21,7 @@
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
     "pg": "^8.13.0",
